--- a/src/tailwind/daizy.css
+++ b/src/tailwind/daizy.css
@@ -650,15 +650,18 @@ html {
 
 @media (prefers-color-scheme: dark) {
   :root {
-    color-scheme: light;
-    --pc: 91.372% 0.051 257.57;
-    --sc: 88.5103% 0.03222 282.339433;
-    --ac: 11.988% 0.038303 335.171434;
-    --nc: 83.9233% 0.012704 257.651965;
-    --inc: 17.6255% 0.017178 214.515264;
-    --suc: 16.0988% 0.015404 197.823719;
-    --wac: 17.8345% 0.009167 71.47031;
-    --erc: 14.6185% 0.022037 20.076293;
+    color-scheme: dark;
+    --in: 72.06% 0.191 231.6;
+    --su: 64.8% 0.150 160;
+    --wa: 84.71% 0.199 83.87;
+    --er: 71.76% 0.221 22.18;
+    --pc: 13.138% 0.0392 275.75;
+    --sc: 14.96% 0.052 342.55;
+    --ac: 14.902% 0.0334 183.61;
+    --inc: 0% 0 0;
+    --suc: 0% 0 0;
+    --wac: 0% 0 0;
+    --erc: 0% 0 0;
     --rounded-box: 1rem;
     --rounded-btn: 0.5rem;
     --rounded-badge: 1.9rem;
@@ -668,18 +671,15 @@ html {
     --border-btn: 1px;
     --tab-border: 1px;
     --tab-radius: 0.5rem;
-    --p: 56.86% 0.255 257.57;
-    --s: 42.5516% 0.161098 282.339433;
-    --a: 59.9398% 0.191515 335.171434;
-    --n: 19.6166% 0.063518 257.651965;
-    --b1: 100% 0 0;
-    --b2: 97.4663% 0.011947 259.822565;
-    --b3: 93.2686% 0.016223 262.751375;
-    --bc: 41.8869% 0.053885 255.824911;
-    --in: 88.1275% 0.085888 214.515264;
-    --su: 80.4941% 0.077019 197.823719;
-    --wa: 89.1725% 0.045833 71.47031;
-    --er: 73.0926% 0.110185 20.076293;
+    --p: 65.69% 0.196 275.75;
+    --s: 74.8% 0.26 342.55;
+    --a: 74.51% 0.167 183.61;
+    --n: 31.3815% 0.021108 254.139175;
+    --nc: 74.6477% 0.0216 264.435964;
+    --b1: 25.3267% 0.015896 252.417568;
+    --b2: 23.2607% 0.013807 253.100675;
+    --b3: 21.1484% 0.01165 254.087939;
+    --bc: 74.6477% 0.0216 264.435964;
   }
 }
 
@@ -3772,6 +3772,10 @@ html {
   position: sticky;
 }
 
+.right-0 {
+  right: 0px;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -3829,8 +3833,12 @@ html {
   width: 13rem;
 }
 
-.flex-none {
-  flex: none;
+.w-auto {
+  width: auto;
+}
+
+.columns-4 {
+  columns: 4;
 }
 
 .flex-row {
@@ -3881,9 +3889,18 @@ html {
   padding-right: 1rem;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.font-medium {
+  font-weight: 500;
 }
 
 .opacity-60 {
@@ -3909,5 +3926,10 @@ html {
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
