Add WorkTime part to main page

--- a/src/tailwind/daizy.css
+++ b/src/tailwind/daizy.css
@@ -4444,6 +4444,14 @@ input.tab:checked + .tab-content,
   max-width: 24rem;
 }
 
+.list-outside {
+  list-style-position: outside;
+}
+
+.list-disc {
+  list-style-type: disc;
+}
+
 .columns-3 {
   columns: 3;
 }
@@ -4584,6 +4592,11 @@ input.tab:checked + .tab-content,
   padding-right: 2rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -4599,6 +4612,10 @@ input.tab:checked + .tab-content,
 
 .text-center {
   text-align: center;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .text-3xl {
